# Cacophony

./: .gitignore  README.md  stack.yaml
Cacophony/: Cacophony.cabal  LICENSE
Cacophony/app/: Main.hs
Cacophony/src/: Lib.hs
cacophony-hs/: cacophony.cabal  notes.md
cacophony-hs/src/: Main.hs
cacophony-hs/src/Cacophony/: Main.hs
cacophony-rs/: Cargo.toml
src/: PortAudio.jl  PortAudioTypes.jl  main.rs  makefile  pa_NativeEnums.jl  pa_NativeStructs.jl  pa_NativeTypes.jl  patest_saw.c
