name:                Cacophony
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/athuras/Cacophony
license:             BSD3
license-file:        LICENSE
author:              Alexander Huras
maintainer:          alex.huras@gmail.com
copyright:           2017 Alexander Huras
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , portaudio
                     , PortMidi
  default-language:    Haskell2010

executable Cacophony-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Cacophony
  default-language:    Haskell2010

test-suite Cacophony-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Cacophony
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/athuras/Cacophony
