name:                Cacophony
version:             0.0.0.1
synopsis:            Real Time Digital Synthesis
description:         Ongoing attempt at writing a synthesizer (with instruments) in Haskell.
license:             MIT
license-file:        LICENSE
author:              Alexander Huras
maintainer:          alex.huras+cacophony@gmail.com
category:            Sound
build-type:          Simple
cabal-version:       >=1.10


executable Cacophony
  main-is:            Cacophony/Main.hs
  extensions:         GeneralizedNewtypeDeriving
  build-depends:
    base,
    monad-par,
    portaudio,
    portmidi,
    repa,
    repa-algorithms
  hs-source-dirs:      src
  default-language:    Haskell2010
